Chapter 4: Working with Data
Signed-off-by: wu0655 <wu0655@gmail.com>

--- a/Build.Websites.with.Hugo/code/portfolio/themes/basic/layouts/partials/head.html
+++ b/Build.Websites.with.Hugo/code/portfolio/themes/basic/layouts/partials/head.html
@@ -1,7 +1,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ .Site.Title }}</title>
+  <title>
+  {{- if .Page.IsHome -}}
+    {{ .Site.Title }}
+  {{- else -}}
+    {{ .Title }} – {{ .Site.Title }}
+  {{- end -}}
+  </title>
 
+  <meta name="author" content="{{ .Site.Params.author }}">
+  <meta name="description" content="
+    {{- with .Page.Description -}}
+      {{ . }}
+    {{- else -}}
+      {{ .Site.Params.description }}
+    {{- end -}}">
   <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
+
 </head>
