--- a/Build.Websites.with.Hugo/code/portfolio/themes/basic/layouts/projects/list.html
+++ b/Build.Websites.with.Hugo/code/portfolio/themes/basic/layouts/projects/list.html
@@ -1,3 +1,4 @@
+
 {{ define "main" }}
 
   <h2>{{ .Title }}</h2>
@@ -5,9 +6,17 @@
   {{ .Content }}
 
   <section class="projects">
+    <section class="project">
+    {{ with .Site.GetPage "/opensource.md" }}
+      <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
+      <p>{{ .Summary }}</p>
+    {{ end }}
+    </section>
+
     {{ range .Pages }}
     <section class="project">
       <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
+      <p>{{ .Summary }}</p>
     </section>
     {{ end }}
   </section>
