--- a/Build.Websites.with.Hugo/code/portfolio/themes/basic/layouts/projects/single.html
+++ b/Build.Websites.with.Hugo/code/portfolio/themes/basic/layouts/projects/single.html
@@ -3,7 +3,7 @@
     <section class="project-list">
       <h2>Projects</h2>
       <ul>
-        {{ range (where .Site.RegularPages "Type" "in" "projects").ByDate.Reverse }}
+        {{ range (where .Site.RegularPages "Type" "in" "projects") }}
           <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
         {{ end }}
       </ul>
@@ -13,6 +13,13 @@
       <h2>{{ .Title }}</h2>
 
       {{ .Content }}
+      <img alt="{{ .Params.alt_text }}" src="{{ .Params.image }}">
+      <h3>Tech used</h3>
+        <ul>
+        {{ range .Params.tech_used }}
+          <li>{{ . }}</li>
+        {{ end }}
+        </ul>
     </section>
 
   </div>
