--- a/Build.Websites.with.Hugo/code/portfolio/themes/basic/static/css/style.css
+++ b/Build.Websites.with.Hugo/code/portfolio/themes/basic/static/css/style.css
@@ -23,9 +23,24 @@ nav > a {
 
 @media only screen and (min-width: 768px) {
   nav { flex-direction: row; }
+
   .project-container { display: flex; }
 
   .project-container .project-list { width: 20%; }
 
   .project-container .project { flex: 1; }
+}
+
+.oss {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.oss article {
+  border: 1px solid #ddd;
+  box-shadow: 3px 3px 3px #ddd;
+  margin: 0.5%;
+  padding: 0.5%;
+  width: 30%;
 }
